# tf-al

./: .buildinfo  .codeclimate.yml  .coverage.yml  .gitignore  .travis.yml  LICENSE  README.md  ROADMAP.md  api.html  contrib.html  custom.html  genindex.html  get_started.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: api.doctree  contrib.doctree  custom.doctree  environment.pickle  get_started.doctree  index.doctree
.github/workflows/: gh-pages.yml
_modules/: index.html
_modules/tf_al/: active_learning_loop.html  dataset.html  experiment_metrics.html  experiment_suit.html  metrics.html  oracle.html  pool.html
_modules/tf_al/utils/: logger.html  tf.html
_modules/tf_al/wrapper/: mc_dropout.html  model.html
_sources/: get_started.rst.txt  index.rst.txt
active_learning/: __init__.py  acquisition_function.py  active_learning_loop.py  config.py  dataset.py  experiment_metrics.py  experiment_suit.py  oracle.py  pool.py  serializer.py  utils.py
active_learning/model/: __init__.py  checkpoint.py  mc_dropout.py  model.py  moment_propagation.py  swag.py  tf_growth.py
active_learning/utils/: logger.py  tf.py
active_learning/wrapper/: __init__.py  mc_dropout.py  model.py  swag.py
docs/: api.rst  conf.py  contrib.rst  custom.rst  get_started.rst  index.rst  requirements.txt
tests/: test_acquisition_function.py  test_active_learning_loop.py  test_config.py  test_dataset.py  test_experiment_metrics.py  test_metrics.py  test_metrics_accumulator.py  test_oracle.py  test_pool.py
tests/exp_metrics/: test_csv_handler.py  test_experiment_metrics_writer.py  test_meta_handler.py
tests/exp_metrics/metrics/: .meta.json
tests/metric/: experiment_metrics.py  test_csv_handler.py  test_experiment_metrics_handler.py  test_meta_handler.py
tests/score/: test_label.py  test_query.py
tests/strategy/: test_acquisition_function.py
tests/test_query/: test_acquisition_function.py  test_bald.py  test_random.py
tf_al/: __init__.py  acquisition_function.py  active_learning_loop.py  config.py  dataset.py  experiment.py  experiment_metrics.py  experiment_suit.py  metrics.py  metrics_accumulator.py  oracle.py  pool.py  standard_dataset.py  stat.py
tf_al/data/: pool.py  stream.py
tf_al/exp_metrics/: csv_handler.py  experiment_metrics.py  file_handler.py  meta_handler.py
tf_al/metric/: __init__.py  file_handler.py  meta_handler.py
tf_al/pool_init/: __init__.py  bic.py  pool_initializer.py  sbc.py
tf_al/query/: __init__.py  acquisition_function.py  bald.py  max_entropy.py  random.py
tf_al/score/: __checks.py  __init__.py  label.py  pool.py  query.py  time.py
tf_al/stats/: __init__.py  metric_dispatcher.py  sampling.py  stochastic.py
tf_al/stats/sampling/: __init__.py  accuracy.py  auc.py  confusion.py  false_negative.py  false_positive.py  loss.py  true_negative.py  true_positive.py
tf_al/stats/stochastic/: __init__.py  accuracy.py  auc.py  loss.py
tf_al/strategy/: __init__.py  acquisition_function.py
tf_al/strategy/emc/: __init__.py
tf_al/strategy/qbc/: __init__.py
tf_al/strategy/us/: __init__.py  bald.py  least_conf.py  max_entropy.py  random.py
tf_al/utils/: __init__.py  acquisition.py  logger.py  mem.py  pools.py  problem.py  seeds.py  tf.py
tf_al/wrapper/: __init__.py  checkpoint.py  ensemble.py  mc_dropout.py  model.py  moment_propagation.py  proxy.py  swag.py  utils.py
