[metadata]
name = active-learning
version = 0.0.1
author = Maksim Sandybekov
author_email = maksim.sandybekov@live.de
description = A package to create active learning loops and perform experiments in active learning environments using tensorflow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ExLeonem/active-learning
keywords = active learning, deep learning, tensorflow
project_urls = 
    Bug Tracker = https://github.com/ExLeonem/active-learning/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find: