[metadata]
name = active-learning
version = 0.0.1
author = Maksim Sandybekov
author_email = maksim.sandybekov@live.de
description = A package to create active learning loops and perform experiments in active learning environments using tensorflow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ExLeonem/active-learning
keywords = active learning, deep learning, tensorflow
project_urls = 
    Bug Tracker = https://github.com/ExLeonem/active-learning/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
install_requires =
    numpy == 1.18.5
    tensorflow <= 2.9.9
    tensorflow-datasets == 4.2.0

[options.extras_require]
dev =
    pytest == 6.2.4
    pytest-cov == 2.12.1
    sphinx == 3.2.1
    pydata-sphinx-theme == 0.6.3
    sphinx-book-theme == 0.1.2
    sphinxcontrib-applehelp == 1.0.2
    sphinxcontrib-devhelp == 1.0.2
    sphinxcontrib-htmlhelp == 1.0.3
    sphinxcontrib-jsmath == 1.0.1
    sphinxcontrib-qthelp == 1.0.3
    sphinxcontrib-serializinghtml == 1.1.4


[build_sphinx]
project = 'Active Learning'
version = 1.0.0
release = 1.0.0
build-dir = docs/_build